--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #cecece;
+  --foreground: #232323;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #030303;
     --foreground: #ededed;
   }
+}
+
+html {
+  scroll-behavior: smooth !important;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", serif;
 }
