--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,8 @@ body {
   overflow-x: hidden;
 }
 
-.sec2,
-.sec1 {
+/* .animation,
+.portfolio-title {
   width: 100%;
   height: 100vh;
   background-color: white;
@@ -38,13 +38,14 @@ body {
   align-items: center;
   justify-content: center;
   font-family: poppins;
-}
-.sec2 > h1 {
+} */
+.animation > .object {
   animation: revealing;
   animation-timeline: view(block);
   animation-range: cover 0% cover 50%;
   margin: 0px;
 }
+
 @keyframes revealing {
   from {
     color: gray;
